Converted new MCP tool dtos to use records